--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,7 +9,7 @@
             android:icon="@drawable/category_icon"
             android:title="@string/menu_category" />
         <item
-            android:id="@+id/nav_shopping_list"
+            android:id="@+id/nav_list"
             android:icon="@drawable/list_icon"
             android:title="@string/shopping_list" />
         <item
@@ -21,11 +21,11 @@
             android:icon="@drawable/history_icon"
             android:title="@string/history" />
         <item
-            android:id="@+id/account"
+            android:id="@+id/nav_profile"
             android:icon="@drawable/account_icon"
             android:title="@string/profile" />
         <item
-            android:id="@+id/settings"
+            android:id="@+id/nav_settings"
             android:icon="@drawable/settings_icon"
             android:title="@string/settings" />
 <!--        <item-->
