--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,51 +3,46 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/blankFragment">
+    app:startDestination="@+id/nav_category">
 
     <fragment
         android:id="@+id/nav_category"
-        android:name="com.example.shoppingapplication.ui.home.HomeFragment"
+        android:name="com.example.shoppingapplication.ui.category.CategoryNewFragment"
         android:label="@string/menu_category"
-        tools:layout="@layout/fragment_home" >
+        tools:layout="@layout/fragment_home">
         <action
-            android:id="@+id/action_nav_home_to_detailFragment"
-            app:destination="@id/detailFragment" />
+            android:id="@+id/action_nav_category_to_nav_listFragment"
+            app:destination="@id/nav_list" />
     </fragment>
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.shoppingapplication.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" >
-        <action
-            android:id="@+id/action_nav_gallery_to_listFragment"
-            app:destination="@id/nav_listFragment" />
-    </fragment>
+        android:id="@+id/nav_settings"
+        android:name="com.example.shoppingapplication.ui.settings.SettingsFragment"
+        android:label="Settings"
+        tools:layout="@layout/fragment_gallery" />
 
     <fragment
         android:id="@+id/nav_history"
-        android:name="com.example.shoppingapplication.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
+        android:name="com.example.shoppingapplication.ui.history.HistoryFragment"
+        android:label="History"
         tools:layout="@layout/fragment_slideshow" />
     <fragment
-        android:id="@+id/detailFragment"
-        android:name="com.example.shoppingapplication.DetailFragment"
+        android:id="@+id/nav_profile"
+        android:name="com.example.shoppingapplication.ui.profile.ProfileFragment"
         android:label="fragment_detail"
         tools:layout="@layout/fragment_detail" />
     <fragment
-        android:id="@+id/nav_listFragment"
-        android:name="com.example.shoppingapplication.ListFragment"
+        android:id="@+id/nav_list"
+        android:name="com.example.shoppingapplication.ui.list.ListFragment"
         android:label="List Fragment"
-        tools:layout="@layout/fragment_list" />
+        tools:layout="@layout/fragment_list" >
+        <action
+            android:id="@+id/action_nav_listFragment_to_nav_cart"
+            app:destination="@id/nav_cart" />
+    </fragment>
     <fragment
         android:id="@+id/nav_cart"
-        android:name="com.example.shoppingapplication.CategoryFragment"
+        android:name="com.example.shoppingapplication.ui.cart.CartFragment"
         android:label="Category"
         tools:layout="@layout/fragment_category" />
-    <fragment
-        android:id="@+id/blankFragment"
-        android:name="com.example.shoppingapplication.BlankFragment"
-        android:label="fragment_blank"
-        tools:layout="@layout/fragment_blank" />
 </navigation>
